wcag QA fixes for images

--- a/dimensions-eng.html
+++ b/dimensions-eng.html
@@ -105,7 +105,7 @@
 					walls bordering the east end. The Dock is lit by eight high-mast towers
 					with high pressure sodium lighting fixtures plus standard mercury vapour
 					lighting. </p>
-				<img src="images/stabil.jpg" width="320" height="234" alt="Stabilizer pocket" style="float: right; padding-left: 15px;" />
+				<img src="images/stabil.jpg" width="320" height="234" alt="" style="float: right; padding-left: 15px;" />
 				<p>Recently, stabilizer pockets were built into the concrete walls of the
 					drydock. This new feature enables cruise ships to extend their stabilizers
 					for inspection, maintenance and repair while in drydock.</p>
@@ -113,7 +113,7 @@
         <br />
 				<div class="option4">
 				<h2>Dock Dimensions</h2>
-				<a href="dimensions2-eng.html"><img src="images/dimensions-2.gif" alt="Plan View and Logitudinal Section of Esquimalt Graving Dock with various dimensions" width="450" height="282" /></a>
+				<a href="dimensions2-eng.html"><img src="images/dimensions-2.gif" alt="Plan View and Longitudinal Section of Esquimalt Graving Dock with various dimensions" width="450" height="282" /></a>
 				<h2>Aerial View of the Dock</h2>
 				<img src="images/aerienne-aerial-eng.jpg" width="450" height="284" alt="Aerial view of North Landing Wharf and South Jetty" />
 				<h2>Cross Section of the Dock</h2>
