--- a/dimensions2-eng.html
+++ b/dimensions2-eng.html
@@ -85,7 +85,7 @@
 		<!-- CONTENT TITLE ENDS | FIN DU TITRE DU CONTENU -->
 			</a></h1>
 		
-		<img src="images/dimensions.gif" alt="Plan View and Logitudinal Section of Esquimalt Graving Dock with various dimensions" width="740"  style="width: 740px; " />
+		<img src="images/dimensions.gif" alt="Plan View and Longitudinal Section of Esquimalt Graving Dock with various dimensions" width="740"  style="width: 740px; " />
 			</div>
 		</div>
 
