--- a/env/barrage-boom-eng.html
+++ b/env/barrage-boom-eng.html
@@ -95,7 +95,7 @@
 					</h1>
 				<p>by Dan del Villano </p>
 				<div class="smallFont" style="font-weight:bold; float:right; padding-left:10px; width:300px;">
-					<img src="../images/lowering-the-boom-1.jpg" alt="Marine spill cleanup" width="300" height="199" /><br />
+					<img src="../images/lowering-the-boom-1.jpg" alt="" width="300" height="199" /><br />
 					<acronym title="Public Works and Government Services Canada">PWGSC</acronym> employees and contractors learn the serious business of marine spill cleanup at the esquimalt Graving Dock. The orange inflatable boom is used to control oil spills. </div>
 				<p>In early spring, the Esquimalt Graving Dock, Canada's biggest dry dock,
 					was teh site of oil spill training for <acronym title="Public Works and Government Services Canada">PWGSC</acronym> employees and contractors who
@@ -110,7 +110,7 @@
 					training is part of our standing oil spill contingency plan.&quot; There
 					hasn't been a marine spill in the two years that Lawes has been working
 					at the Dock, but he isn't planning to take any chances. </p>
-				<div class="smallFont" style="font-weight:bold; float:left; padding-right:10px; width:300px;"><img src="../images/lowering-the-boom-2.jpg" alt="orange inflatable boom" width="300" height="200" /><br />
+				<div class="smallFont" style="font-weight:bold; float:left; padding-right:10px; width:300px;"><img src="../images/lowering-the-boom-2.jpg" alt="" width="300" height="200" /><br />
 					Erring
 					on the side of caution, the Esquimalt Graving Dock always has a boom deployed. </div>
 				<p>Perhaps more importantly, the marine spill response training is another
