--- a/env/barrage-boom-fra.html
+++ b/env/barrage-boom-fra.html
@@ -92,7 +92,7 @@
 					</h1>
 				<p>Par  Dan del Villano </p>
 				<div class="smallFont" style="font-weight:bold; float:right; padding-left:10px; width:300px;">
-					<img src="../images/lowering-the-boom-1.jpg" alt="le nettoyage des déversements en milieu marin" width="300" height="199" /><br />
+					<img src="../images/lowering-the-boom-1.jpg" alt="" width="300" height="199" /><br />
 					Des employ&eacute;s et des entrepreneurs de <acronym title="Travaux publics et Services gouvernementaux Canada">TPSGC</acronym> se familiarisent avec le nettoyage des d&eacute;versements en milieu marin, sujet tr&egrave;s important, &agrave; la cale s&egrave;che d'Esquimalt. Ce barrage flottant gonflable, de couleur orange, sert &agrave; contenir les d&eacute;versements de p&eacute;trole. </div>
 
 				<p>Au d&eacute;but du printemps, &agrave; la cale s&egrave;che d'Esquimalt (plus grande cale s&egrave;che au Canada), une formation sur l'intervention en cas de d&eacute;versement de p&eacute;trole a &eacute;t&eacute; donn&eacute;e aux employ&eacute;s et aux entrepreneurs de Travaux publics et Services gouvernementaux Canada (<acronym title='Travaux publics et Services gouvernementaux Canada'>TPSGC</acronym>) travaillant sur place.</p>
@@ -101,7 +101,7 @@
 					
 				<p>Daryl Lawes, coordonnateur des services environnementaux &agrave; la cale s&egrave;che, explique que cette formation n'a pas &eacute;t&eacute; donn&eacute;e seule. &laquo;&nbsp;Il s'agit du suivi d'une activit&eacute; pr&eacute;c&eacute;dente qui portait sur les mesures &agrave; prendre pour &eacute;viter les d&eacute;versements terrestres et les nettoyer, le cas &eacute;ch&eacute;ant, explique-t-il. Ces cours s'inscrivent dans notre plan d'urgence en cas de d&eacute;versement de p&eacute;trole.&nbsp;&raquo; Depuis deux ans que M. Lawes travaille &agrave; la cale s&egrave;che, aucun d&eacute;versement n'y a eu lieu en milieu marin, et il souhaite conserver ce dossier sans tache. </p>
 					
-				<div class="smallFont" style="font-weight:bold; float:left; padding-right:10px; width:300px;"><img src="../images/lowering-the-boom-2.jpg" alt="toujours un barrage flottant" width="300" height="200" /><br />
+				<div class="smallFont" style="font-weight:bold; float:left; padding-right:10px; width:300px;"><img src="../images/lowering-the-boom-2.jpg" alt="" width="300" height="200" /><br />
 					Dans le respect du principe de prudence, on d&eacute;ploie toujours un barrage flottant &agrave; la cale s&egrave;che d'Esquimalt. </div>
 
 				<p>La formation sur l'intervention en cas de d&eacute;versement de p&eacute;trole constitue &eacute;galement une autre &eacute;tape &agrave; franchir en vue de l'obtention prochaine, par la cale s&egrave;che, de la certification <acronym title="Organisation internationale de normalisation">ISO</acronym>&nbsp;14001. Celle-ci est une norme de gestion de l'environnement reconnue &agrave; l'&eacute;chelle internationale, et aucune grande installation de construction et de r&eacute;paration de navires au monde n'est ainsi certifi&eacute;e.</p>
