--- a/env/ecocivisme-environment-eng.html
+++ b/env/ecocivisme-environment-eng.html
@@ -97,7 +97,7 @@
 					Team Leader, Registration Services &ndash; Environmental, Health
 						and Safety Systems
 </p>
-				<div class="smallFont" style="font-weight:bold; float:right; padding-bottom: 10px; padding-left:10px; width:300px;"><img src="../images/good-environmental-citizen.jpg" alt="Bonnie MacKenzie presents certificates of appreciation" width="300" height="202" /><br />
+				<div class="smallFont" style="font-weight:bold; float:right; padding-bottom: 10px; padding-left:10px; width:300px;"><img src="../images/good-environmental-citizen.jpg" alt="" width="300" height="202" /><br />
 					Bonnie MacKenzie, Regional Director General, Public Works
 						and Governmetn Services Canada (centre) presents certificates
 						of appreciation to several members of the Esquimalt Graving
