--- a/env/ecocivisme-environment-fra.html
+++ b/env/ecocivisme-environment-fra.html
@@ -95,7 +95,7 @@
 Services d'enregistrement &ndash; Environnement, Syst&egrave;mes de sant&eacute; et de s&eacute;curit&eacute;
 
 </p>
-				<div class="smallFont" style="font-weight:bold; float:right; padding-bottom: 10px; padding-left:10px; width:300px;"><img src="../images/good-environmental-citizen.jpg" alt="Bonnie MacKenzie remet des certificats de reconnaissance" width="300" height="202" /><br />
+				<div class="smallFont" style="font-weight:bold; float:right; padding-bottom: 10px; padding-left:10px; width:300px;"><img src="../images/good-environmental-citizen.jpg" alt="" width="300" height="202" /><br />
 				Bonnie MacKenzie, directrice g&eacute;n&eacute;rale r&eacute;gionale de Travaux publics et Services gouvernementaux Canada (au centre), remet des certificats de reconnaissance &agrave; plusieurs membres du comit&eacute; directeur du <acronym title="syst&egrave;me de gestion de l'environnement">SGE</acronym> de la cale s&egrave;che d'Esquimalt. De gauche &agrave; droite&nbsp;: Jim Sandwith, Peninsula Waste Water Services Ltd; Malcolm Barker, Victoria Shipyards; Gordon Safarik, Esquimalt Dry Dock Company; et Peter Brennan, Jenkins Marine. 
 				</div>
 				
