--- a/env/gestion-management-eng.html
+++ b/env/gestion-management-eng.html
@@ -100,7 +100,7 @@
 					<p>All of those conducting business at the Esquimalt Graving Dock are expected
 						to operate in an environmentally responsible manner. This includes compliance
 						with all applicable environmental regulations and standards. In support
-            of this, the Esquimalt Graving Dock has developed a <a href="../files/ebmps-mpges.pdf">comprehensive set of Environmental Best Management Practices</a> (EBMPs).</p>
+            of this, the Esquimalt Graving Dock has developed a <a href="../fichiers-files/ebmps-mpges.pdf">comprehensive set of Environmental Best Management Practices</a> (EBMPs).</p>
 					<p><acronym title="Environmental Best Management Practices">EBMPs</acronym> are
 						ways of reducing and preventing the discharge of pollutants into the environment
 						through good housekeeping, maintenance, materials management, communications,
@@ -109,14 +109,14 @@
 						can minimize the production of waste and pollution from activities such
 						as paint removal and surface preparation, painting, engine maintenance
 						and materials handling.</p>
-					<div style="text-align: center;"><img src="../images/barils-bache-drums-tarp.jpg" alt="EBMP: (left) Drums for wastewater transfer; (right) Tarps for paint handling" width="402" height="131" /></div>
+					<div style="text-align: center;"><img src="../images/barils-bache-drums-tarp.jpg" alt="" width="402" height="131" /></div>
 				
           <div class="topPage"> <a href="#tphp" title="Return to Top of Page"><img src="/clf20/images/tphp.gif" width="19" height="12" alt="" /><br />Top of Page</a> </div>
 				</div>
 				<br />
 				<div style="float: left; clear: right;">
 					<h2 id="formation-training">Training &amp; Awareness</h2>
-					<div class="smallFont" style="float:left; padding-right:10px; padding-bottom:10px; width:150px; font-weight:bold; text-align:center"><span class="smallFont" style="float:left; padding-right:10px; padding-bottom:10px; width:150px; font-weight:bold; text-align:center"><img src="../images/deverse-spill.jpg" width="150" height="181" alt="EGD employees discuss spill response procedures" /></span><br />
+					<div class="smallFont" style="float:left; padding-right:10px; padding-bottom:10px; width:150px; font-weight:bold; text-align:center"><span class="smallFont" style="float:left; padding-right:10px; padding-bottom:10px; width:150px; font-weight:bold; text-align:center"><img src="../images/deverse-spill.jpg" width="150" height="181" alt="" /></span><br />
 				  <acronym title="Esquimalt Graving Dock">EGD</acronym> employees discuss spill response procedures</div>
 					<p>Esquimalt Graving Dock employees receive training in a number of areas
 						including health and safety, spill response, hazardous materials/waste
@@ -128,7 +128,7 @@
 				</div>
 				<br />
 					<h2 id="participation">Participation and Outreach</h2>
-					<div class="smallFont" style="float:right; padding-left:10px; padding-bottom:10px; width:200px; font-weight:bold; text-align:center"><img src="../images/velo-bike.jpg" alt="2004 EGD Bike to Work Week Team" width="200" height="150" /><br />
+					<div class="smallFont" style="float:right; padding-left:10px; padding-bottom:10px; width:200px; font-weight:bold; text-align:center"><img src="../images/velo-bike.jpg" alt="" width="200" height="150" /><br />
 						2004&nbsp;<acronym title="Esquimalt Graving Dock">EGD</acronym> Bike to Work Week Team</div>
 					<p>The Esquimalt Graving Dock promotes environmental awareness through participation
 						in outreach and educational events such as educational site tours, the
@@ -139,7 +139,7 @@
 				<br />
 				<div style="clear:right;">
 					<h2 id="ee-ea">Environmental Assessments (EA)</h2>
-					<img src="../images/construct.jpg" alt="Construction site" width="200" height="149" style="float:left; padding-right:10px; padding-bottom:10px;" />
+					<img src="../images/construct.jpg" alt="" width="200" height="149" style="float:left; padding-right:10px; padding-bottom:10px;" />
 					<p>All new construction projects at the Esquimalt Graving Dock must be considered
 						for review under the Canadian Environmental Assessment Act (CEAA).
 						If an assessment is required, an action plan is created to manage any potential
