--- a/env/initiatives-eng.html
+++ b/env/initiatives-eng.html
@@ -97,7 +97,7 @@
 					Services Canada is responsible for implementing programs to achieve its environmental
 					objectives and targets. Examples of key environmental initiatives include:</p>
 				<h2 id="qa-aq">Air Quality</h2>
-				<div style="clear:right;"> <img src="../images/recouvert-cover.jpg" alt="Vessel shrouded by tarpaulins" width="200" height="180" style="float:left; padding-right:10px;" />
+				<div style="clear:right;"> <img src="../images/recouvert-cover.jpg" alt="" width="200" height="180" style="float:left; padding-right:10px;" />
 					<p>Air quality is a significant environmental concern at the <acronym title="Esquimalt Graving Dock">EGD</acronym>.
 						Control of paint overspray and dust is particularly important due to the
 						proximity of the surrounding residential area and the marine environment.</p>
@@ -126,7 +126,7 @@
 								marine environment. This system removes fine particles and oily substances
 								from the storm water. <br />
 							</li>
-							<li><img src="../images/detecteur-sensor.jpg" alt="Oil spill sensor unit in use" width="200" height="124" style="float:right; padding-left:10px; padding-top:10px; padding-bottom:10px;" />Oil
+							<li><img src="../images/detecteur-sensor.jpg" alt="" width="200" height="124" style="float:right; padding-left:10px; padding-top:10px; padding-bottom:10px;" />Oil
 								spill sensor units installed at locations surrounding the <acronym title="Esquimalt Graving Dock">EGD</acronym>,
 								provide operational staff with early detection of oil on the water. In
 								the event of a spill that reaches the harbour, the units will initiate
@@ -137,7 +137,7 @@
 					</div>
 					<div style="min-height:201px;; clear:right;">
 						<h2 id="solide">Solid Waste Reduction</h2>
-						<p><img src="../images/solide.jpg" alt="Solid waste composting site" width="200" height="151" style="float:left; padding-right:10px; padding-bottom:10px;" />The <acronym title="Esquimalt Graving Dock">EGD</acronym>'s
+						<p><img src="../images/solide.jpg" alt="" width="200" height="151" style="float:left; padding-right:10px; padding-bottom:10px;" />The <acronym title="Esquimalt Graving Dock">EGD</acronym>'s
 							approach to waste management includes reducing, recycling, composting and
 							purchasing supplies with recycled content. The <acronym title="Esquimalt Graving Dock">EGD</acronym> Recycling
 							program includes office recyclables, waste batteries, ink cartridges and
@@ -148,7 +148,7 @@
 					</div>
 					<div class="option2" style="clear:right; float: right;">
 						<h2 id="danger-hazard">Hazardous Materials</h2>
-						<div class="smallFont" style="float:right; padding-left:10px; width:200px; font-weight:bold; text-align:center"><img src="../images/danger-hazard.jpg" alt="Hazardous materials storage vault" width="200" height="150" /><br />
+						<div class="smallFont" style="float:right; padding-left:10px; width:200px; font-weight:bold; text-align:center"><img src="../images/danger-hazard.jpg" alt="" width="200" height="150" /><br />
 							Hazardous materials storage vault</div>
 						<p>To encourage diligence when managing hazardous materials at the Esquimalt
 							Graving Dock, employees are trained in the proper handling, storage and
@@ -162,7 +162,7 @@
 					</div>
 					<div style="clear:both;">
 						<h2 id="cons">Energy &amp; Water Reduction</h2>
-						<div class="smallFont" style="float:left; padding-right:10px; padding-bottom:10px; width:169px; font-weight:bold; text-align:center"><img src="../images/compress.jpg" alt="Air cooled compressor at pumphouse" width="169" height="225" /><br />
+						<div class="smallFont" style="float:left; padding-right:10px; padding-bottom:10px; width:169px; font-weight:bold; text-align:center"><img src="../images/compress.jpg" alt="" width="169" height="225" /><br />
 							Air-cooled compressor</div>
 						<p>The Esquimalt Graving Dock has implemented several initiatives to reduce
 							energy use, decrease fresh water consumption and improve the efficiency
@@ -190,13 +190,13 @@
 							effective and inexpensive deterrent, an air bubble curtain was built into
 							the Dock's entrance to discourage wildlife such as seals and fish from
 							entering the dock space. </p>
-						<div class="smallFont" style="text-align:center; font-weight:bold;"><img src="../images/protection.jpg"  alt="Bubble curtain in operation; Seal rescue prior to the bubble curtain" width="477" height="150" /><br />
+						<div class="smallFont" style="text-align:center; font-weight:bold;"><img src="../images/protection.jpg"  alt="" width="477" height="150" /><br />
 								Bubble curtain in operation; Seal rescue prior to
 								the bubble curtain
 						</div>
 
 						<h3>Unique Ecosystems</h3>
-						<img src="../images/eco.jpg" alt="Garry Oak Ecosystem: flower, tree, ferns" width="226" height="116" style="float:right; padding-left:10px; padding-bottom:10px;" />
+						<img src="../images/eco.jpg" alt="" width="226" height="116" style="float:right; padding-left:10px; padding-bottom:10px;" />
 						<p>A portion of the Esquimalt Graving Dock property contains the remnants
 							of a unique and endangered Garry Oak Ecosystem. A plant species inventory
 							has been conducted on site to identify if at risk species exist in the
@@ -204,7 +204,7 @@
 							with local Universities and community groups to protect and restore the
 							natural state of the area.</p>
 						<h3>Facility Improvements</h3>
-						<p><img src="../images/installation-facility.jpg" alt="New facility enhancements" width="200" height="95" style="float:left; padding-right:10px; padding-bottom:10px;" />A
+						<p><img src="../images/installation-facility.jpg" alt="" width="200" height="95" style="float:left; padding-right:10px; padding-bottom:10px;" />A
 							positive working environment is important for those working at the Esquimalt
 							Graving Dock. Over time, the facility surroundings have been enhanced to
 							reflect the cultural and historical values of the facility.</p>
