--- a/env/initiatives-fra.html
+++ b/env/initiatives-fra.html
@@ -95,7 +95,7 @@
 					d'environnement. Voici des exemples d'initiatives environnementales cl&eacute;s&nbsp;:</p>
 				<div style="clear:right;">
 					<h2 id="qa-aq">Qualit&eacute; de l'air</h2>
-					<img src="../images/recouvert-cover.jpg" alt="Navire recouvert d'une b&acirc;che" width="200" height="180" style="float:left; padding-right:10px;" />
+					<img src="../images/recouvert-cover.jpg" alt="" width="200" height="180" style="float:left; padding-right:10px;" />
 					<p>La qualit&eacute; de l'air est une grande pr&eacute;occupation de la <acronym title="cale s&egrave;che d'Esquimalt">CSE</acronym>.
 						Il est particuli&egrave;rement important de contr&ocirc;ler les pertes
 						de peinture &agrave; la pulv&eacute;risation et les poussi&egrave;res en
@@ -132,7 +132,7 @@
 							avant d'&ecirc;tre rejet&eacute;es un milieu marin. Ce syst&egrave;me &eacute;limine
 							les particules fines et les substance mazouteuses dans les eaux pluviales.<br />
 						</li>
-						<li><img src="../images/detecteur-sensor.jpg" alt="D&eacute;tecteur de d&eacute;versement d'hyrocarbures en service" width="200" height="124" style="float:right; padding-left:10px; padding-top:10px; padding-bottom:10px;" />Des
+						<li><img src="../images/detecteur-sensor.jpg" alt="" width="200" height="124" style="float:right; padding-left:10px; padding-top:10px; padding-bottom:10px;" />Des
 							d&eacute;tecteurs de d&eacute;versement d'hydrocarbures install&eacute;s
 							aux alentours de la <acronym title="cale s&egrave;che d'Esquimalt">CSE</acronym> servent &agrave; d&eacute;tecter
 							rapidement la pr&eacute;sense d'hydrocarbures sur l'eau et &agrave; alerter
@@ -145,7 +145,7 @@
 				</div>
 				<div style="clear:right;">
 					<h2 id="solide">R&eacute;duction des d&eacute;chets solides</h2>
-					<p><img src="../images/solide.jpg" alt="Site de compostage des d&eacute;chets solides" width="200" height="151" style="float:left; padding-right:10px;" />La
+					<p><img src="../images/solide.jpg" alt="" width="200" height="151" style="float:left; padding-right:10px;" />La
 						r&eacute;duction, le recyclage, le compostage et l'achat de fournitures &agrave; contenu
 						recycl&eacute; sont des &eacute;l&eacute;ments de l'approche adopt&eacute;e
 						par la <acronym title="cale s&egrave;che d'Esquimalt">CSE</acronym> en
@@ -161,7 +161,7 @@
 				</div>
 				<div class="option2" style="float: right; clear:right;">
 					<h2 id="danger-hazard">Mati&egrave;res dangereuses</h2>
-					<div class="smallFont" style="float:right; padding-left:10px; width:200px; font-weight:bold; text-align:center"><img src="../images/danger-hazard.jpg" alt="Enceinte de stockage des mati&egrave;res dangereuses" width="200" height="150" /><br />
+					<div class="smallFont" style="float:right; padding-left:10px; width:200px; font-weight:bold; text-align:center"><img src="../images/danger-hazard.jpg" alt="" width="200" height="150" /><br />
 						Enceinte de stockage des mati&egrave;res dangereuses</div>
 					<p>Les employ&eacute;s sont incit&eacute;s &agrave; la prudence lorsqu'ils
 						sont en pr&eacute;sence de mati&egrave;res dangereuses dans les installations
@@ -184,7 +184,7 @@
 				<div style="clear:right;">
 					<h2 id="cons">R&eacute;duction de la consommation d'&eacute;nergie
 						et d'eau</h2>
-					<div class="smallFont" style="float:left; padding-right:10px; padding-bottom:10px; width:169px; font-weight:bold; text-align:center"><img src="../images/compress.jpg" alt="Compresseur &agrave; refroidissement par air du poste de pompage" width="169" height="225" /><br />
+					<div class="smallFont" style="float:left; padding-right:10px; padding-bottom:10px; width:169px; font-weight:bold; text-align:center"><img src="../images/compress.jpg" alt="" width="169" height="225" /><br />
 						Compresseaur &agrave; refroidissement par air</div>
 					<p>La Cale s&egrave;che d'Esquimalt a mis en &#339;uvre plusieurs initiatives
 						afin de r&eacute;duire sa consommation d'&eacute;nergie et d'eau douce
@@ -216,12 +216,12 @@
 						un dipositif s&ucirc;r, efficace et peu co&ucirc;teux, a &eacute;t&eacute; am&eacute;nag&eacute; &agrave; l'entr&eacute;e
 						du bassin pour dissuader des esp&egrave;ces animales, comme les phoques
 						et les poisson, d'y entrer.</p>
-					<div class="smallFont" style="text-align:center; font-weight:bold;"><img src="../images/protection.jpg"  alt="Rideau de bulles d'air en service; Sauvetage d'un phoque qu'ill ne franchisse le rideau de bulles d'air" width="477" height="150" /><br />
+					<div class="smallFont" style="text-align:center; font-weight:bold;"><img src="../images/protection.jpg"  alt="" width="477" height="150" /><br />
 							Rideau de bulles d'air en service; Sauvetage d'un
 							phoque avant qu'il ne franchisse le rideau de bulles d'air
 					</div>
 					<h3>&Eacute;cosyst&egrave;mes uniques</h3>
-					<img src="../images/eco.jpg" alt="&Eacute;cosyst&egrave;mes de ch&ecirc;nes de Garry: fleur, arbre, foug&egrave;res" width="226" height="116" style="float:right; padding-left:10px;" />
+					<img src="../images/eco.jpg" alt="" width="226" height="116" style="float:right; padding-left:10px;" />
 					<p>Les vestiges d'un &eacute;cosyst&egrave;me unique et en p&eacute;ril
 						de ch&ecirc;nes de Garry sont pr&eacute;sents sur une partie du terrain
 						de la cale s&egrave;che d'Esquimalt. On a dress&eacute; un inventaire de
@@ -230,7 +230,7 @@
 						avec des universit&eacute;s et des groupes communautaires de la r&eacute;gion &agrave; des
 						activit&eacute;s de protection et de r&eacute;tablissement du milieu naturel.</p>
 					<h3>Am&eacute;liorations des installations</h3>
-					<p><img src="../images/installation-facility.jpg" alt="Nouvelles am&eacute;liorations des installations" width="200" height="95" style="float:left; padding-right:10px; padding-bottom:10px;" />Les
+					<p><img src="../images/installation-facility.jpg" alt="" width="200" height="95" style="float:left; padding-right:10px; padding-bottom:10px;" />Les
 						personnes travaillant &agrave; la cale s&egrave;che d'Esquimalt jugent
 						qu'il est important que leur milieu de travail soit positif. Des am&egrave;liorations
 						ont &egrave;t&egrave; apport&eacute;es au fil du temps aux abords des installations
