--- a/env/programme-program-eng.html
+++ b/env/programme-program-eng.html
@@ -97,7 +97,7 @@
 				ship repair, construction and maintenance facility on the west coast of North
         America.</em></p>
 
-			<img src="../images/croisiere-cruise.jpg" alt="Cruise ship in dock" width="250" height="212" style="float: right; padding-left: 10px;" />
+			<img src="../images/croisiere-cruise.jpg" alt="" width="250" height="212" style="float: right; padding-left: 10px;" />
 
       <p>
         The	Esquimalt Graving Dock and its users recognize that responsible environmental
