--- a/env/simple-eng.html
+++ b/env/simple-eng.html
@@ -92,7 +92,7 @@
 					<!-- CONTENT TITLE BEGINS | DEBUT DU TITRE DU CONTENU -->Keeping It Simple: Bubble curtain saves fish, seals, and valuable time <!-- CONTENT TITLE ENDS | FIN DU TITRE DU CONTENU -->
 					</h1>
 				<div class="smallFont" style="font-weight:bold; float:right; padding-left:10px; width:350px;">
-					<img src="../images/keeping-it-simple-1.jpg" alt="A visitor is gently escorted out of the dock before ship repairs begin. " width="350" height="229" /><br />
+					<img src="../images/keeping-it-simple-1.jpg" alt="" width="350" height="229" /><br />
 					Before the installation of the bubble curtain, seals would often
 					find their way into the Esquimalt Graving Dock. Here, a visitor is gently
 					escorted out of the dock before ship repairs begin. </div>
@@ -137,7 +137,7 @@
 					repair work on hold.&quot;</p>
 				<h2>A Creative Answer</h2>
 				<div class="smallFont" style="font-weight:bold; float:left; padding-right:10px; width:200px;">
-					<img src="../images/keeping-it-simple-2.jpg" alt="A curtain of air bubbles" width="200" height="238" /><br />
+					<img src="../images/keeping-it-simple-2.jpg" alt="" width="200" height="238" /><br />
 					A
 					black pipe down the wall and a white pipe along the bottom
 					of the Esquimalt Graving Dock release a curtain of air bubbles
