--- a/env/simple-fra.html
+++ b/env/simple-fra.html
@@ -89,7 +89,7 @@
 					<!-- CONTENT TITLE BEGINS | DEBUT DU TITRE DU CONTENU -->Une id&eacute;e toute simple&nbsp;: un rideau de bulles d'air permet de sauver des poissons et des phoques, et d'&eacute;pargner un temps pr&eacute;cieux <!-- CONTENT TITLE ENDS | FIN DU TITRE DU CONTENU -->
 					</h1>
 				<div class="smallFont" style="font-weight:bold; float:right; padding-left:10px; width:350px;">
-					<img src="../images/keeping-it-simple-1.jpg" alt="Un visiteur est gentiment escorté hors de la cale afin que les travaux de réparation d'un navire puissent commencer." width="350" height="229" /><br />
+					<img src="../images/keeping-it-simple-1.jpg" alt="" width="350" height="229" /><br />
 					Avant l'installation du rideau de bulles d'air, des phoques se faufilaient souvent dans la cale s&egrave;che d'Esquimalt. Ici, un visiteur est gentiment escort&eacute; hors de la cale afin que les travaux de r&eacute;paration d'un navire puissent commencer. </div>
 
 				<p>Le nouveau rideau de bulles d'air utilis&eacute; &agrave; la cale s&egrave;che d'Esquimalt permet de sauver des centaines de saumons et d'assurer le bon fonctionnement du chantier maritime.</p>
@@ -113,7 +113,7 @@
 					
 				<h2>Une solution g&eacute;niale</h2>
 				<div class="smallFont" style="font-weight:bold; float:left; padding-right:10px; width:200px;">
-					<img src="../images/keeping-it-simple-2.jpg" alt="un rideau de bulles d'air " width="200" height="238" /><br />
+					<img src="../images/keeping-it-simple-2.jpg" alt="" width="200" height="238" /><br />
 					Un tuyau noir longe les parois et un tuyau blanc, le fond de la cale s&egrave;che d'Esquimalt. Ils lib&egrave;rent de l'air qui forme un rideau de bulles et emp&ecirc;che les poissons et les phoques d'entrer dans le bassin en m&ecirc;me temps que les navires.</div>
 					
 				<p>C'est &agrave; M. Anderson, qui a d&eacute;j&agrave; travaill&eacute; dans le secteur des pipelines, qu'on a demand&eacute; de trouver une solution au probl&egrave;me. Ses recherches l'ont amen&eacute; &agrave; adapter aux fins de la cale s&egrave;che un rideau de bulles d'air utilis&eacute; sur les lieux de certains barrages et &eacute;closeries. Un tuyau a &eacute;t&eacute; install&eacute; le long des parois de 25&nbsp;m de haut et du plancher. Une s&eacute;rie de trous, espac&eacute;s d'environ 60&nbsp;cm, ont &eacute;t&eacute; perc&eacute;s dans le tuyau, sur lequel on a ensuite plac&eacute; un manom&egrave;tre.</p>
