--- a/env/voie-way-fra.html
+++ b/env/voie-way-fra.html
@@ -91,7 +91,7 @@
 					<!-- CONTENT TITLE ENDS | FIN DU TITRE DU CONTENU -->
 					</h1>
 				<p>par Dan del Villano</p>
-				<div class="smallFont" style="font-weight:bold; float:right; padding-left:10px; width:200px;"><img src="../images/leading-the-way.jpg" alt="Les coordonnateurs des services environnementaux à la cale sèche d'Esquimalt." width="200" height="124" /><br />
+				<div class="smallFont" style="font-weight:bold; float:right; padding-left:10px; width:200px;"><img src="../images/leading-the-way.jpg" alt="" width="200" height="124" /><br />
 				Jim Milne (au centre) et les coordonnateurs des services environnementaux, Daryl Lawes et Rae-Ann Shaw, &agrave; la cale s&egrave;che d'Esquimalt.</div>
 
 				Pour la plupart des gens, le concept de technologie fait penser &agrave; des machines. Pour Daryl Lawes et Rae-Ann Shaw, de la R&eacute;gion du Pacifique, il s'agit aussi de la fa&ccedil;on dont les gens utilisent ces machines.
