--- a/his/1921-eng.html
+++ b/his/1921-eng.html
@@ -94,8 +94,13 @@
 					</h1>
 				<div class="option4">
 					<h2>1921 &ndash; 1923</h2>
-					<img src="../images/historique_history/1921_1.jpg" alt="Head of dock looking West" width="300" height="246" style="padding-bottom:10px;" /><br />
-					<img src="../images/historique_history/1921_2.jpg" alt="Excavation on rock bottom floor" width="300" height="243" /> </div>
+					<div class="smallFont" style="font-weight:bold;">
+						<img src="../images/historique_history/1921_1.jpg" alt="" width="300" height="246"  /><br />
+						Head of dock looking West<br /><br />					
+						<img src="../images/historique_history/1921_2.jpg" alt="" width="300" height="243" /><br />
+						Excavation on rock bottom floor<br />
+					</div>
+				</div>
 				<p>Select a year:</p>
 				<ul>
 					<li><a href="1921-eng.html">History&nbsp;1921 &ndash; 1923</a></li>
