--- a/his/1921-fra.html
+++ b/his/1921-fra.html
@@ -90,8 +90,13 @@
 					</h1>
 				<div class="option4">
 					<h2>1921&nbsp;&ndash; 1923</h2>
-					<img src="../images/historique_history/1921_1.jpg" alt="Vue de la cale en direction ouest" width="300" height="246" style="padding-bottom:10px;" /><br />
-					<img src="../images/historique_history/1921_2.jpg" alt="Excavation dans le roc" width="300" height="243" /> </div>
+					<div class="smallFont" style="font-weight:bold;">
+						<img src="../images/historique_history/1921_1.jpg" alt="" width="300" height="246" /><br />
+						Vue de la cale en direction ouest<br /><br />
+						<img src="../images/historique_history/1921_2.jpg" alt="" width="300" height="243" /><br />
+						Excavation dans le roc<br />
+					</div>
+				</div>
 				<p>Choisir une ann&eacute;e&nbsp;:</p>
 				<ul>
 					<li><a href="1921-fra.html">Historique&nbsp;1921&nbsp;&ndash; 1923</a></li>
