--- a/his/1925-eng.html
+++ b/his/1925-eng.html
@@ -94,8 +94,13 @@
 					</h1>
 				<div class="option4">
 					<h2>1925</h2>
-					<img src="../images/historique_history/1925_1.jpg" alt="Completed dock looking East" width="300" height="239" style="padding-bottom:10px;" /><br />
-					<img src="../images/historique_history/1925_2.jpg" alt="Pumphouse construction" width="300" height="245" /> </div>
+					<div class="smallFont" style="font-weight:bold;">
+						<img src="../images/historique_history/1925_1.jpg" alt="" width="300" height="239" /><br />
+						Completed dock looking East<br /><br />
+						<img src="../images/historique_history/1925_2.jpg" alt="" width="300" height="245" /><br />
+						Pumphouse construction<br />
+					</div>
+				</div>
 				<p>Select a year:</p>
 				<ul>
 					<li><a href="1921-eng.html">History&nbsp;1921 &ndash; 1923</a></li>
