--- a/his/1925-fra.html
+++ b/his/1925-fra.html
@@ -90,8 +90,13 @@
 					</h1>
 				<div class="option4">
 					<h2>1925</h2>
-					<img src="../images/historique_history/1925_1.jpg" alt="Vue de la cale termin&eacute;e, en direction est" width="300" height="239" style="padding-bottom:10px;" /><br />
-					<img src="../images/historique_history/1925_2.jpg" alt="Construction du b&acirc;timent du service des pompes" width="300" height="245" /> </div>
+					<div class="smallFont" style="font-weight:bold;">
+						<img src="../images/historique_history/1925_1.jpg" alt="" width="300" height="239" /><br />
+						Vue de la cale termin&eacute;e, en direction est<br /><br />
+						<img src="../images/historique_history/1925_2.jpg" alt="" width="300" height="245" /><br />
+						Construction du b&acirc;timent du service des pompes<br />
+					</div>
+				</div>
 				<p>Choisir une ann&eacute;e&nbsp;:</p>
 				<ul>
 					<li><a href="1921-fra.html">Historique&nbsp;1921&nbsp;&ndash; 1923</a></li>
