--- a/his/1926-eng.html
+++ b/his/1926-eng.html
@@ -94,8 +94,13 @@
 					</h1>
 				<div class="option4">
 					<h2>1926</h2>
-					<img src="../images/historique_history/1926_1.jpg" alt="Caisson in berth 1" width="300" height="245" style="padding-bottom:10px;" /><br />
-					<img src="../images/historique_history/1926_2.jpg" alt="S.S. Reginolite in the drydock" width="300" height="245" /> </div>
+					<div class="smallFont" style="font-weight:bold;">
+						<img src="../images/historique_history/1926_1.jpg" alt="" width="300" height="245" /><br />
+						Caisson in berth 1<br /><br />
+						<img src="../images/historique_history/1926_2.jpg" alt="" width="300" height="245" /><br />
+						S.S. Reginolite in the drydock<br />
+					</div>
+				</div>
 				<p>Select a year:</p>
 				<ul>
 					<li><a href="1921-eng.html">History&nbsp;1921 &ndash; 1923</a></li>
