--- a/his/1926-fra.html
+++ b/his/1926-fra.html
@@ -90,8 +90,13 @@
 					</h1>
 				<div class="option4">
 					<h2>1926</h2>
-					<img src="../images/historique_history/1926_1.jpg" alt="Caisson &ndash; Section&nbsp;1" width="300" height="245" style="padding-bottom:10px;" /><br />
-					<img src="../images/historique_history/1926_2.jpg" alt="Le &laquo;&nbsp;S.S. Reginolite&nbsp;&raquo; en cale s&egrave;che" width="300" height="245" /> </div>
+					<div class="smallFont" style="font-weight:bold;">
+						<img src="../images/historique_history/1926_1.jpg" alt="" width="300" height="245" /><br />
+						Caisson &ndash; Section&nbsp;1<br /><br />
+						<img src="../images/historique_history/1926_2.jpg" alt="" width="300" height="245" /><br />
+						Le &laquo;&nbsp;S.S. Reginolite&nbsp;&raquo; en cale s&egrave;che<br />
+					</div>
+				</div>
 				<p>Choisir une ann&eacute;e&nbsp;:</p>
 				<ul>
 					<li><a href="1921-fra.html">Historique&nbsp;1921&nbsp;&ndash; 1923</a></li>
