--- a/his/1927-eng.html
+++ b/his/1927-eng.html
@@ -95,8 +95,13 @@
 					</h1>
 				<div class="option4">
 					<h2>1927</h2>
-					<img src="../images/historique_history/1927_1.jpg" alt="Confederation Ceremony" width="300" height="236" style="padding-bottom:10px;" /><br />
-					<img src="../images/historique_history/1927_2.jpg" alt="Passenger ships in the drydock" width="300" height="242" /> </div>
+					<div class="smallFont" style="font-weight:bold;">
+						<img src="../images/historique_history/1927_1.jpg" alt="" width="300" height="236" /><br />
+						Confederation Ceremony<br /><br />
+						<img src="../images/historique_history/1927_2.jpg" alt="" width="300" height="242" /><br />
+						Passenger ships in the drydock<br />
+					</div>
+				</div>
 				<p>Select a year:</p>
 				<ul>
 					<li><a href="1921-eng.html">History&nbsp;1921 &ndash; 1923</a></li>
