--- a/his/1927-fra.html
+++ b/his/1927-fra.html
@@ -89,9 +89,13 @@
 					Historique<!-- CONTENT TITLE ENDS | FIN DU TITRE DU CONTENU -->
 					</h1>
 				<div class="option4">
-				<h2>1927</h2>
-					<img src="../images/historique_history/1927_1.jpg" alt="C&eacute;r&eacute;monies de la Conf&eacute;d&eacute;ration" width="300" height="236" style="padding-bottom:10px;" /><br />
-					<img src="../images/historique_history/1927_2.jpg" alt="Paquebots en cale s&egrave;che" width="300" height="242" />
+					<h2>1927</h2>
+					<div class="smallFont" style="font-weight:bold;">
+						<img src="../images/historique_history/1927_1.jpg" alt="" width="300" height="236" /><br />
+						C&eacute;r&eacute;monies de la Conf&eacute;d&eacute;ration<br /><br />
+						<img src="../images/historique_history/1927_2.jpg" alt="" width="300" height="242" /><br />
+						Paquebots en cale s&egrave;che<br />
+					</div>
 				</div>
 
 				<p>Choisir une ann&eacute;e&nbsp;:</p>
