--- a/his/article-eng.html
+++ b/his/article-eng.html
@@ -117,7 +117,7 @@
 				<p>The security measures worked. After a 13-day stay, with round-the-clock
 					shifts, the <acronym title="Queen Elizabeth">QE</acronym> sailed away an armed troop ship &ndash; and Victoria breathed a
 					sigh of relief.</p>
-				<div style="text-align: center;"><img src="../images/ssqe.jpg" alt="S.S. Queen Elizabeth &ndash; Conversion To Troop Carrier, February, 1942" width="349" height="418" /></div>
+				<div style="text-align: center;"><img src="../images/ssqe.jpg" alt="" width="349" height="418" /></div>
 			</div>
 
 			<!-- CONTENT ENDS | FIN DU CONTENU -->
