--- a/his/article-fra.html
+++ b/his/article-fra.html
@@ -121,7 +121,7 @@
 				<p>Les mesures de s&eacute;curit&eacute; furent efficaces&nbsp;: apr&egrave;s
 					treize jours de travaux 24&nbsp;heures sur&nbsp;24, le <acronym title="Queen Elizabeth">QE</acronym> repartit transform&eacute; en
 					navire de transport militaire &ndash; et tout Victoria poussa un soupir de soulagement. </p>
-				<div style="text-align: center;"><img src="../images/ssqe.jpg" alt="S.S. Queen Elizabeth, 1942" width="349" height="418" /></div>
+				<div style="text-align: center;"><img src="../images/ssqe.jpg" alt="" width="349" height="418" /></div>
 			</div>
 
 			<!-- FIN DU CONTENU | CONTENT ENDS -->
