--- a/historique-history-eng.html
+++ b/historique-history-eng.html
@@ -97,14 +97,14 @@
 					Cove. The Colony's economy heavily relied on the commercial shipbuilding
 					industry and it had to ensure it could attract business. At the time, the
 					Drydock was large enough to accommodate every ship in the British Empire.</p>
-				<p><img src="images/reginolite.jpg" alt="September 14, 1926 &ndash; Painting progress of Reginolite, first vessel in drydock" width="196" height="234" style="float:right; padding-left:10px; padding-bottom:10px;" />The
+				<p><img src="images/reginolite.jpg" alt="" width="196" height="234" style="float:right; padding-left:10px; padding-bottom:10px;" />The
 					federal department of Public Works assumed custodianship of the graving
 					dock in&nbsp;1887. As vessels grew in size, it was decided to build a larger
 					drydock at Skinner's Cove in Esquimalt. Skinner's Cove was chosen because
 					it was sheltered from wind and was situated on a solid rock basin &ndash; ideal
 					for a drydock. The dock took six years to build and was the second largest
 					in the world. </p>
-				<div class="smallFont" style="text-align: center; font-weight:bold;"><img src="images/ceremon.jpg" alt="Time Capsule dedicated" width="425" height="319" />
+				<div class="smallFont" style="text-align: center; font-weight:bold;"><img src="images/ceremon.jpg" alt="" width="425" height="319" />
 					<br />The Honourable David Anderson, former Minister of Environment with His
 						Worship, Mayor Ray Rice of Esquimalt and Jack Gale of the Esquimalt Graving
 						Dock at the rededication ceremony, July&nbsp;1,&nbsp;2002.</div>
