--- a/historique-history-fra.html
+++ b/historique-history-fra.html
@@ -95,7 +95,7 @@
 					il fallait prendre les mesures pour promouvoir l'activit&eacute; commerciale
 					dans ce secteur. &Agrave; l'&eacute;poque, la cale s&egrave;che &eacute;tait
 					assez grande pour accueillir tous les navires de l'Empire britannique.</p>
-				<p><img src="images/reginolite.jpg" alt="14 septembre 1926 &ndash; Travaux de peinture du  Reginolite, le tout premier navire &agrave; utiliser les installations de la cale s&egrave;che" width="196" height="234" style="float:right; padding-left:10px; padding-bottom:10px;" />Le
+				<p><img src="images/reginolite.jpg" alt="" width="196" height="234" style="float:right; padding-left:10px; padding-bottom:10px;" />Le
 					minist&egrave;re f&eacute;d&eacute;ral des Travaux publics est charg&eacute; d'administrer
 					la cale s&egrave;che depuis&nbsp;1987. Les navires devenant de plus en plus importants,
 					il fut d&eacute;cid&eacute; de construire une grande cale de radoub au lieu
@@ -104,7 +104,7 @@
 					situ&eacute;e dans un bassin de roc, conditions id&eacute;ales pour l'am&eacute;nagement
 					d'une cale s&egrave;che. Il fallut pas moins de six ans pour construire
 					la cale, qui &eacute;tait la deuxi&egrave;me en importance au monde.</p>
-							<div class="smallFont" style="text-align: center; font-weight:bold;"><img src="images/ceremon.jpg" alt="Une capsule historique est dédicacée" width="425" height="319" /><br />
+							<div class="smallFont" style="text-align: center; font-weight:bold;"><img src="images/ceremon.jpg" alt="" width="425" height="319" /><br />
 					Le ministre de l'Environnement, l'Honorable David Anderson
 						et Son Honneur le maire d'Esquimalt, Ray Rice, en compagnie de Jack Gale,
 						de la Cale s&egrave;che d'Esquimalt, lors de la c&eacute;r&eacute;monie
