--- a/index-eng.html
+++ b/index-eng.html
@@ -96,7 +96,7 @@
 			<!-- CONTENT TITLE ENDS | FIN DU TITRE DU CONTENU -->
 		</h1>
       
-		<div class="main1"><img src="images/dock-cale.jpg" alt="Esquimalt Graving Dock facing East" width="388" height="250" style="width: 388px; height: 250px;" />
+		<div class="main1"><img src="images/dock-cale.jpg" alt="" width="388" height="250" style="width: 388px; height: 250px;" />
 					
 			<p>The Esquimalt Graving Dock, or EGD, is proud to be federally owned, operated, and maintained. <acronym title="Esquimalt Graving Dock">EGD</acronym> is the largest solid-bottom commercial drydock on the West Coast of the Americas. We are <a href="emp-loc-eng.html">located</a> in an ice free harbour on Vancouver Island near gateways to Alaska and the Pacific Rim. </p>
 			<p>Our world class facilities include stabilizer pockets and high-speed heavy lift cranes up to 150&nbsp;tonnes/165&nbsp;tons. The Dock can accommodate vessels up to 100,000&nbsp;<acronym title="Deadweight Tonnage">DWT</acronym> or about 90%&nbsp;of the world's ships.</p>
