--- a/index-fra.html
+++ b/index-fra.html
@@ -96,7 +96,7 @@
 					Cale s&egrave;che d'Esquimalt &ndash; Bienvenue
 					<!-- CONTENT TITLE ENDS | FIN DU TITRE DU CONTENU -->
 				</h1>
-				<div class="main1"><img src="images/dock-cale.jpg" alt="Cale s&egrave;che d'Esquimalt vue est" width="388" height="250" style="width: 388px; height: 250px;" />
+				<div class="main1"><img src="images/dock-cale.jpg" alt="" width="388" height="250" style="width: 388px; height: 250px;" />
 					
 					<p>La Cale s&egrave;che d'Esquimalt (CSE) est la plus importante forme de radoub commerciale de la c&ocirc;te Ouest des Am&eacute;riques. Nous sommes <a href="emp-loc-fra.html">situ&eacute;s</a> dans un port ouvert &agrave; l'ann&eacute;e longue, sur l'&icirc;le de Vancouver, &agrave; proximit&eacute; des voies d'acc&egrave;s
 &agrave; l'Alaska et aux pays riverains du Pacifique. </p>
