--- a/ser/pompes-pumps-eng.html
+++ b/ser/pompes-pumps-eng.html
@@ -115,7 +115,7 @@
 					<li>Computerized Maintenance Management System (CMSS)</li>
 				</ul>
 
-				<div style="text-align: center;"><img src="../images/pompe-pump.jpg" width="295" height="152" alt="Pumphouse" /></div>
+				<div style="text-align: center;"><img src="../images/pompe-pump.jpg" width="295" height="152" alt="" /></div>
 				<a name="inonder-fill" id="inonder-fill"></a>
 				<h2>Filling-up and Emptying The Drydock</h2>
 				<p> To drain the basin dock three&nbsp;54&quot; twin parallel centrifugal pumps
@@ -152,7 +152,7 @@
 				<p>The yard staff provide a variety of services including keel block setting,
 					assisting with the docking and undocking vessels and maintaining the grounds
 					on this 19&nbsp;hectare site.</p>
-				<div style="text-align: center;"><img src="../images/personnel-staff.jpg" width="300" height="225" alt="Yard Staff building" /></div>
+				<div style="text-align: center;"><img src="../images/personnel-staff.jpg" width="300" height="225" alt="" /></div>
 
 				<p><i>Source: &nbsp;Harbour &amp; Shipping Journal, July&nbsp;2002, Volume&nbsp;85,
 						No.&nbsp;7</i> </p>
