--- a/ser/pompes-pumps-fra.html
+++ b/ser/pompes-pumps-fra.html
@@ -111,7 +111,7 @@
 					<li>Aide &agrave; l'entr&eacute;e au bassin avec le <i>Esquimalt II</i></li>
 					<li>Syst&egrave;me informatis&eacute; de gestion de l'entretien (CMSS)</li>
 				</ul>
-				<div style="text-align: center;"><img src="../images/pompe-pump.jpg" width="295" height="152" alt="Service des pompes" /></div>
+				<div style="text-align: center;"><img src="../images/pompe-pump.jpg" width="295" height="152" alt="" /></div>
 				<a name="inonder-fill" id="inonder-fill"></a>
 				<h2>Inondation et ass&egrave;chement du bassin de mise en cale s&egrave;che</h2>
 				<p>Pour ass&eacute;cher le bassin, nous utilisons trois pompes centrifuges
@@ -152,7 +152,7 @@
 				<p>Le personnel du chantier offre divers services, notamment la mise en place
 					des tins, les manoeuvres d'entr&eacute;e/sortie des navires et l'entretien
 					des terrains (19&nbsp;hectares).</p>
-				<div style="text-align: center;"><img src="../images/personnel-staff.jpg" width="300" height="225" alt="B&acirc;timent du personnel du chantier" /></div>
+				<div style="text-align: center;"><img src="../images/personnel-staff.jpg" width="300" height="225" alt="" /></div>
 				<p><i>Source&nbsp;: Harbour &amp; Shipping Journal, Juillet&nbsp;2002, Volume&nbsp;85, n<sup>o</sup>&nbsp;7</i> </p>
 			</div>
 
