--- a/ser/reparation-repair-eng.html
+++ b/ser/reparation-repair-eng.html
@@ -93,7 +93,7 @@
 					Ship Repair Services
 					<!-- CONTENT TITLE ENDS | FIN DU TITRE DU CONTENU -->
 					</h1>
-				<img src="../images/grue-crane.jpg" width="193" height="280" alt="Crane" style="float: right; padding: 10px;" />
+				<img src="../images/grue-crane.jpg" width="193" height="280" alt="" style="float: right; padding: 10px;" />
 				<p> The Dock (which has a capacity of up to 100,000&nbsp;<acronym title="Deadweight Tonnage">DWT</acronym>), is serviced by three
 					heavy-lift electrically-driven, rail-mounted travelling cranes:</p>
 				<ul>
@@ -113,7 +113,7 @@
 				<div class="topPage"> <a href="#tphp" title="Return to Top of Page"><img src="/clf20/images/tphp.gif" width="19" height="12" alt="" /><br />
 					Top of Page</a> </div>
 				<h2>Enviro Blast Ship Cleaning Service </h2>
-				<img src="../images/enviroblast.jpg" width="200" height="212" alt="Enviro Blast" style="float: left; padding: 10px;" />
+				<img src="../images/enviroblast.jpg" width="200" height="212" alt="" style="float: left; padding: 10px;" />
 				<p>These machines were developed specifically for use on steel horizontal
 					and vertical surfaces like ship hulls, decks and holding/storage tanks.
 					This is how it works:</p>
