--- a/ser/reparation-repair-fra.html
+++ b/ser/reparation-repair-fra.html
@@ -89,7 +89,7 @@
 					Services de r&eacute;paration navale
 					<!-- CONTENT TITLE ENDS | FIN DU TITRE DU CONTENU -->
 					</h1>
-				<img src="../images/grue-crane.jpg" width="193" height="280" alt="Grue" style="float: right; padding: 10px;" />
+				<img src="../images/grue-crane.jpg" width="193" height="280" alt="" style="float: right; padding: 10px;" />
 				<p> La cale s&egrave;che (dont la capacit&eacute; est de 100&nbsp;000&nbsp;tonnes de
 					port en lourd) est munie de trois ponts roulants &eacute;lectriques mont&eacute;s
 					sur rails pour charges lourdes&nbsp;:</p>
@@ -114,7 +114,7 @@
 				<div class="topPage"> <a href="#tphp" title="Retourner au haut de la page"><img src="/clf20/images/tphp.gif" width="19" height="12" alt="" /><br />
 					Haut de la page</a> </div>
 				<h2>Service de nettoyage de bateau Enviro Blast</h2>
-				<img src="../images/enviroblast.jpg" width="200" height="212" alt="Enviro Blast" style="float: left; padding: 10px;" />
+				<img src="../images/enviroblast.jpg" width="200" height="212" alt="" style="float: left; padding: 10px;" />
 				<p> Ces machines ont &eacute;t&eacute; d&eacute;velopp&eacute;es sp&eacute;cifiquement
 					pour &ecirc;tre utilis&eacute;es sur des surfaces horizontales et verticales
 					en acier telles que les coques, les ponts et les r&eacute;servoirs d'entreposage
