--- a/services-eng.html
+++ b/services-eng.html
@@ -102,7 +102,7 @@
           <p>
           The pumphouse staff is responsible for the fill and drain of the dock basin, electrical supply, compressed air, sewage and fresh water. For further information contact the pumphouse supervisor at&nbsp;250-363-3768;or the pumphouse floor at&nbsp;250-363-3788.
           </p>
-          <img src="images/pompe-pump.jpg" width="295" height="152" alt="Pumphouse" />
+          <img src="images/pompe-pump.jpg" width="295" height="152" alt="" />
 
           <h2>Electrical</h2>
 
@@ -115,7 +115,7 @@
           <p>
           The yard staff provides a variety of services including keel block setting, assisting with the docking and undocking of vessels, maintaining the grounds and oil spill response.
           </p>
-          <img src="images/personnel-staff.jpg" width="300" height="225" alt="Yard Staff building" />
+          <img src="images/personnel-staff.jpg" width="300" height="225" alt="" />
 
           <h2>Crane</h2>
 
@@ -125,7 +125,7 @@
 
           <p>Cranes at <acronym title="Esquimalt Graving Dock">EGD</acronym>:</p>
 
-          <img src="images/grue-crane.jpg" width="193" height="280" alt="Crane" style="float: right; padding-left: 10px;" />
+          <img src="images/grue-crane.jpg" width="193" height="280" alt="" style="float: right; padding-left: 10px;" />
 
           <p>
           <strong>Krupp 150&nbsp;tonne Level Luffing Crane (1982)</strong> &ndash; 150-tonne capacity at 35&nbsp;metres and a 100-tonne capacity at 50&nbsp;metres. This crane has a main hook capable of lifting entire vessels onto land for refit or repair and an auxiliary hook with a 15&nbsp;tonne capacity generally used to transport materials onto the vessel. This crane is situated on the North side of the Dock and is a valuable crane to serve our Clients needs for vessels berthed at the North Landing Wharf.
