--- a/env/gestion-management-fra.html
+++ b/env/gestion-management-fra.html
@@ -96,7 +96,7 @@
 						dans les installations de la cale s&egrave;che d'Esquimalt le fasse dans
 						le respect de l'environnement, y compris en conformit&eacute; avec l'ensemble
 						de la r&eacute;glementation et des normes environnementales applicables. &Agrave; cetter
-						fin, la Cale s&egrave;che d'Esquimalt a &eacute;labor&eacute; une <a href="../files/ebmps-mpges.pdf">s&eacute;rie
+						fin, la Cale s&egrave;che d'Esquimalt a &eacute;labor&eacute; une <a href="../fichiers-files/ebmps-mpges.pdf">s&eacute;rie
               d&eacute;taill&eacute;e de meilleures pratiques de gestion de l'environnement
               (MPGE)</a>.</p>
 					<p>Les meilleures pratiques de gestion de l'environnement (MPGE)
@@ -109,7 +109,7 @@
 						les d&eacute;chets et la pollution provenant d'activit&eacute;s comme l'enl&egrave;vement
 						de la peinture et la pr&eacute;paration de surface, le peinturage, l'entretien
 						de moteurs et la manutention de mat&eacute;riaux. </p>
-					<div style="text-align: center;"><img src="../images/barils-bache-drums-tarp.jpg" alt="MPGE &ndash; Barils pour le transport des eaux us&eacute;es; MPGE &ndash; B&acirc;ches &agrave; peinture" width="402" height="131" /></div>
+					<div style="text-align: center;"><img src="../images/barils-bache-drums-tarp.jpg" alt="" width="402" height="131" /></div>
 					<p>Pour Consulter une fiche r&eacute;capitulative des <acronym title="meilleures pratiques de gestion de l'environnement">MPGE</acronym>.</p>
 					<div class="topPage"> <a href="#tphp" title="Retourner au haut de la page"><img src="/clf20/images/tphp.gif" width="19" height="12" alt="" /><br />
 						Haut de la page</a> </div>
@@ -117,7 +117,7 @@
 				<br />
 				<div style="float: left; clear:right;">
 					<h2 id="formation-training">Formation et sensibilisation</h2>
-					<div class="smallFont" style="float:left; padding-right:10px; padding-bottom:10px; width:150px; font-weight:bold; text-align:center"><img src="../images/deverse-spill.jpg" alt="Employ&eacute;s de la CSE discutant des m&eacute;thodes d'intervention en cas de d&eacute;versement" width="150" height="181" /><br />
+					<div class="smallFont" style="float:left; padding-right:10px; padding-bottom:10px; width:150px; font-weight:bold; text-align:center"><img src="../images/deverse-spill.jpg" alt="" width="150" height="181" /><br />
 						Employ&eacute;s de la <acronym title="cale s&egrave;che d'Esquimalt">CSE</acronym> discutant
 						des m&eacute;thodes d'intervention en cas de d&eacute;versement</div>
 					<p>Les employ&eacute;s de la cale s&egrave;che d'Esquimalt re&ccedil;oivent
@@ -134,7 +134,7 @@
 				</div>
 				<br />
         <h2 id="participation">Participation et information</h2>
-        <div class="smallFont" style="float:right; padding-left:10px; padding-bottom:10px; width:200px; font-weight:bold; text-align:center"><img src="../images/velo-bike.jpg" alt="&Eacute;quipe de la Semaine v&eacute;lo-boulot de la CSE de 2004" width="200" height="150" /><br />
+        <div class="smallFont" style="float:right; padding-left:10px; padding-bottom:10px; width:200px; font-weight:bold; text-align:center"><img src="../images/velo-bike.jpg" alt="" width="200" height="150" /><br />
           &Eacute;quipe de la Semaine v&eacute;lo-boulot de la <acronym title="cale s&egrave;che d'Esquimalt">CSE</acronym> de&nbsp;2004</div>
         <p>La cale s&egrave;che d'Esquimalt participe &agrave; des activit&eacute;s
           d'information et d'&eacute;ducation, comme des visites &eacute;ducatives,
@@ -146,7 +146,7 @@
 				<br />
 				<div style="clear:right;">
 					<h2 id="ee-ea">&Eacute;valuation environnementale (EE)</h2>
-					<img src="../images/construct.jpg" alt="Chantier de construction" width="200" height="149" style="float:left; padding-right:10px; padding-bottom:10px;" />
+					<img src="../images/construct.jpg" alt="" width="200" height="149" style="float:left; padding-right:10px; padding-bottom:10px;" />
 					<p>Tous les nouveaux projets de construction &agrave; la cale s&egrave;che
 						d'Esquimalt doivent &ecirc;tre &eacute;valu&eacute;s pour d&eacute;terminer
 						s'ils doivent faire l'objet d'un examen en vertu de la <i>Loi canadienne
