--- a/env/politique-policy-fra.html
+++ b/env/politique-policy-fra.html
@@ -121,7 +121,7 @@
 						pour r&eacute;pondre &agrave;l'&eacute;volution des besoins et des attendtes
 						de l'industrie et de la collectivit&eacute;.   </li>
 				</ul>
-				<img src="../images/poli-sig-fra.jpg" alt="Signatures : Directrice g&eacute;n&eacute;rale r&eacute;gionale, R&eacute;gion du Pacificque, TPGSC; Directeur g&eacute;n&eacute;ral, CSE; Coordinateur des op&eacute;rations, CSE" width="494" height="138" />
+				<img src="../images/poli-sig-fra.jpg" alt="" width="494" height="138" />
 			</div>
 
 			<!-- FIN DU CONTENU | CONTENT ENDS -->
