--- a/env/voie-way-eng.html
+++ b/env/voie-way-eng.html
@@ -94,7 +94,7 @@
 					<!-- CONTENT TITLE ENDS | FIN DU TITRE DU CONTENU -->
 					</h1>
 				<p>by Dan del Villano</p>
-				<div class="smallFont" style="font-weight:bold; float:right; padding-left:10px; width:200px;"><img src="../images/leading-the-way.jpg" alt="Environmental Coordinators on site at the Esquimalt Graving Dock." width="200" height="124" /><br />
+				<div class="smallFont" style="font-weight:bold; float:right; padding-left:10px; width:200px;"><img src="../images/leading-the-way.jpg" alt="" width="200" height="124" /><br />
 					Jim Milne (centre) and Environmental Coordinators, Daryl Lawes and Rae-Ann Shaw, on site at the Esquimalt Graving Dock.</div>When it comes to technology, most people think of machines. Pacific Region's
 					Daryl Lawes and Rae-Ann Shaw also think about how <em>people</em> use the
 					technology.
